# generics

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
src/: lib.rs
